flask-app/k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: new-beginnings
  labels:
    k8s-app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: flask-app
  template:
    metadata:
      labels:
        k8s-app: flask-app
    spec:
      containers:
      - name: flask-app
        image: apfossdev/nautilus-flask-app:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
          requests:
            memory: "100Mi"
            cpu: "50m"
